--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.projectKey=devops-test1234_taxi-webapp
+sonar.projectKey=devops-test1234_shop-cart
 sonar.organization=devops-test1234
-sonar.projectName=taxi-webapp
+sonar.projectName=shop-cart
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
